@@ -3,6 +3,7 @@
 	* Updated contact email, year in copyright notices
 	* Fixed bug #9168: 'character' is also a reserved name/word
 	* Fixed bug #2357: "Max filesize allowed (kb)" cannot be changed
+	* Fixed bug #6479: wrong field names for localization
 	* Fixed bug #9240: Value of default_sortby is TCA ctrl section is wrapped with double quotes
 
 2008-11-04 Peter Foerger	<p.foerger@vke-design.de>
